2008-05-05  Rafael Laboissiere  <rafael@debian.org>

	* oct-rl-edit.c (octave_read_init_file): Simply call rl_read_init_file.

2008-05-01  John W. Eaton  <jwe@octave.org>

	* oct-shlib.h (octave_shlib::number_of_functions_loaded):
	Return size_t instead of int value.
	* oct-shlib.cc (octave_base_shlib::number_of_functions_loaded):
	Likewise.
	(octave_base_shlib::fcn_names): Now a std::map object.
	Adjust all uses.
	(octave_base_shlib::fcn_names_iterator,
	octave_base_shlib::fcn_names_const_iterator): New typedefs.
	(octave_base_shlib::add_to_fcn_names, octave_base_shlib::remove):
	Perform reference counting for functions accessed.

2008-04-30  Jaroslav Hajek <highegg@gmail.com>

	* lo-mappers.cc (xlog2 (double)): Compute log (2), not log2 (2).
	(xlog2 (Complex), xlog2 (double, int&), xlog2 (Complex, int&)):
	New functions.
	* lo-mappers.h: Provide decls.

2008-04-25  Michael Goffioul <michael.goffioul@gmail.com>

	* oct-lookup.h (seq_lookup): Do not use output value of fill_n (MSVC
	does not support it).

2008-04-24  Michael Goffioul  <michael.goffioul@gmail.com>

	* lo-sysdep.cc (octave_popen2): Don't set PIPE_NOWAIT for parentWrite.

2008-04-21  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (IDX_VEC_REP::idx_vector_rep (const boolNDArray&)):
	Fix for-loop condition.

2008-04-19  Jaroslav Hajek <highegg@gmail.com>

	* CmplxCHOL.cc, CmplxQR.cc, dbleCHOL.cc, dbleQR.cc: Fix calls to error()

2008-04-16  David Bateman  <dbateman@free.fr>

	* Sparse.h (Sparse<T>& operator = (Sparse<T>&)): Move definition
	of the operator for here
	* Sparse.cc (Sparse<T>& Sparse<T>::operator = (Sparse<T>&)): To
	here. Also delete idx.
	* Array.h (Array<T>& operator = (Array<T>&)): Move definition
	of the operator for here
	* Array.cc (Array<T>& Array<T>::operator = (Array<T>&)): To
	here. Also delete idx.

2008-04-09  Michael Goffioul  <michael.goffioul@gmail.com>

	* lo-mappers.cc (xround): Avoid floating-point overflow when input